namespace DataLab.Dto.MySql
{
    public class ConferenceParticipationDto
    {
        public int Id { get; set; }
        public StudentDto { get; set; }
        public ConferenceDto { get; set; }
    }
}